fix: change base ui url
