# pkg/server/api.go
@@ -1,34 +1,32 @@
 package server
 
 import (
+	"net/http"
+
 	"github.com/gin-gonic/gin"
 )
 
 // BaseHandler godoc
 //
-//	@Summary		Base handler
-//	@Description	Show available endpoints
+//	@Summary		Base api handler
+//	@Description	List available endpoints
 //
-//	@Tags			root
+//	@Tags			api
 //	@Accept			*/*
 //	@Produce		json
 //	@Success		200	{object}	map[string]interface{}
-//	@Router			/ [get]
+//	@Router			/api [get]
 func BaseHandler(c *gin.Context) {
-	c.JSON(200, gin.H{
-		"message": "api root",
+	c.JSON(http.StatusOK, gin.H{
 		"available endpoints": []string{
 			"/api",
 			"/api/ping",
 			"/api/games",
-			"/api/games/random",
-			"/api/games/:gameID",
 			"/api/categories",
-			"/api/categories/random",
-			"/api/categories/:categoryID",
 			"/api/clues",
-			"/api/clues/random",
-			"/api/clues/:clueID",
+			"/api/random/clue",
+			"/api/random/category",
+			"/api/random/game",
 		},
 	})
 }
@@ -38,13 +36,13 @@ func BaseHandler(c *gin.Context) {
 //	@Summary		Show the status of server
 //	@Description	Get the status of server
 //
-//	@Tags			root
+//	@Tags			api
 //	@Accept			*/*
 //	@Produce		json
 //	@Success		200	{object}	map[string]interface{}
 //	@Router			/ping [get]
 func PingHandler(c *gin.Context) {
-	c.JSON(200, gin.H{
+	c.JSON(http.StatusOK, gin.H{
 		"message": "pong",
 	})
 }
